ingress/Pathbased/httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-app2
  template:
    metadata:
      labels:
        app: httpd-app2
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-clusterip
  labels:
    app: httpd-app2

spec:
  type: ClusterIP
  selector:
    app: httpd-app2 # Matches the label used in the Deployment
  ports:
  - port: 80
    targetPort: 80
